--- a/index.html
+++ b/index.html
@@ -511,17 +511,17 @@
                         <div class="col-lg-4 col-md-12 pt-5 mb-5">
                             <h4 class="text-white mb-4">Contact Us For</h4>
 
-                            <div class="d-flex mb-2">
+                            <!-- <div class="d-flex mb-2">
                                 <i class="bi bi-geo-alt text-white me-2"></i>
-                                <p class="text-white mb-0">123 Street,Andhra Pradesh,India</p>
-                            </div>
+                                <p class="text-white mb-0">kaduna </p>
+                            </div> -->
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-white me-2"></i>
-                                <p class="text-white mb-0">info@example.com</p>
+                                <p class="text-white mb-0"> info@sekyenfarms.com</p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-telephone text-white me-2"></i>
-                                <p class="text-white mb-0">+012 345 67890</p>
+                                <p class="text-white mb-0">+2348039661012, +2347052544846 </p>
                             </div>
                             <div class="d-flex mt-4">
                                 <a class="btn btn-secondary btn-square rounded-circle me-2" href="#"><i
